crates/tui/snapshots/fullscreen/usage/usage_reauthentication.snap
---
source: crates/tui/src/app/usage_tests.rs
expression: screen
---
  .                                                                [Dashboard]

        ┌── Usage ─────────────────────────────────────────────────[✗]─┐
        │                                                              │
        │  Reconnect ChatGPT in /config > Providers.                   │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
  ──────│                                                              │──────
  > Buil└──────────────────────────────────────────────────────────────┘
  ─────────────────────────────────────────────────────────── Automatic model

  Esc to close
