crates/tui/snapshots/fullscreen/usage/usage_signed_out.snap
---
source: crates/tui/src/app/usage_tests.rs
expression: screen
---
  .                                                                [Dashboard]

        ┌── Usage ─────────────────────────────────────────────────[✗]─┐
        │                                                              │
        │  Sign in to a subscription: /config > Providers.             │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
  ──────│                                                              │──────
  > Buil└──────────────────────────────────────────────────────────────┘
  ─────────────────────────────────────────────────────────── Automatic model

  Esc to close
